[package]
name = "infinite_noop"
description = "low CPU infinite loop"
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/coreycothrum/infinite_noop"
repository = "https://github.com/coreycothrum/infinite_noop"

[dependencies]
futures = "0.3"
tokio = { version = "1.34", features = ["macros", "rt"] }
